--- a/gleam/gleam.toml
+++ b/gleam/gleam.toml
@@ -17,6 +17,8 @@ gleam_stdlib = ">= 0.34.0 and < 2.0.0"
 simplifile = ">= 2.2.0 and < 3.0.0"
 gleam_regexp = ">= 1.0.0 and < 2.0.0"
 argv = ">= 1.0.2 and < 2.0.0"
+gleam_deque = ">= 1.0.0 and < 2.0.0"
+gleamy_structures = ">= 1.0.0 and < 2.0.0"
 
 [dev-dependencies]
 gleeunit = ">= 1.0.0 and < 2.0.0"
