--- a/gleam/gleam.toml
+++ b/gleam/gleam.toml
@@ -19,6 +19,7 @@ gleam_regexp = ">= 1.0.0 and < 2.0.0"
 argv = ">= 1.0.2 and < 2.0.0"
 gleam_deque = ">= 1.0.0 and < 2.0.0"
 gleamy_structures = ">= 1.0.0 and < 2.0.0"
+gleam_otp = ">= 0.15.0 and < 1.0.0"
 
 [dev-dependencies]
 gleeunit = ">= 1.0.0 and < 2.0.0"
